[package]
name = "rust-blockchain"
version = "0.1.0"
edition = "2021"
authors = ["Dineth Nethsara (Hex Lord Dev)"]
description = "A high-performance, open-source blockchain implementation in Rust"
license = "MIT OR Apache-2.0"
repository = "https://github.com/dinethnethsara/rust-blockchain"
keywords = ["blockchain", "cryptography", "p2p", "smart-contracts"]
categories = ["cryptography", "network-programming"]

[dependencies]
# Core dependencies
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
sha3 = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
lazy_static = "1.4"
thiserror = "1.0"

# Cryptography
ring = "0.17"
secp256k1 = { version = "0.27", features = ["rand-std"] }
ed25519-dalek = "2.0"
aes-gcm = "0.10"
hmac = "0.12"

# Networking
tokio = { version = "1.0", features = ["full"] }
libp2p = { version = "0.52", features = ["tcp", "dns"] }
bincode = "2.0"

# Smart Contracts
wasmer = "3.0"
parity-wasm = "0.42"

# Storage
rocksdb = "0.20"
serde_cbor = "0.11"

# Consensus
rand = "0.8"

[dev-dependencies]
tempfile = "3.0"